# MultiAgents

./: .envGIT  .gitignore  gitupdate.sh  readme copy.md  readme.md  requirements.txt  update_readme.py
001AutomatedProjectPlanner/: !questions.md  automatedProjectPlannerv3.py  automatedProjectv1.py
002AssessingTrelloProjects/: assessTrelloProjects.py  l2.py
003SalesAgent/: crewai_flow.html  salesAgent001.py  salesAgent002.py
005ContentCreator/: contentCreator.py
10.00 Postgres/: crew_query_st.py  postgres_db.py  readme.md  schema_generator.py  testCrewQuery.py
11.0 youtube/: crew_links_analyzer.py  model_youtube_video.py  readme.md  tool_youtube_videos.py
12.0 guardrails/: main.py
2.04 Chart Generator - Coffee production/: app.py  graph_tool.py
2.05 Decorator/: multiplicationToolDecorator.py
2.06 cache/: cache.py
2.08 serperdevtool with cache (Only code not working)/: serperwithcache.py
2.09 pdf creation tool (not working)/: pdfcreationtool.py
3.01 - SimpleFlow No Crew/: simpleFlow.py
3.02 - SimpleFlowPrint/: simpleFlowprint.py
3.04 unstructured states/: crewai_flow.html
3.05 StructuredState/: crewai_flow.html  structedstate.py
3.06 ConditionFlow/: condition.py
3.08  Flow Com Crew/flowcomcrew/: pyproject.toml
3.08  Flow Com Crew/flowcomcrew/src/flowcomcrew/: main.py
3.09 TOP Flow Reflection SeaxNG/: crewPostagem.py
4.03 TOP StreamlitPostcrewSearxngSpiderrs/: streamlit.py
4.04 TOP EXTRA jsonpaser after docling/: main.py  readme.md
5.02 EvoAPI Configurando Tratamento de mensagens/: 1script.py  2script.py  README.md  pyproject.toml  (+2 more)
(+455 files in other folders)
