[project]
name = "flowcomcrew"
version = "0.1.0"
description = "flowcomcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "flowcomcrew.main:kickoff"
run_crew = "flowcomcrew.main:kickoff"
plot = "flowcomcrew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
